--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
-        <a href="https://github.com/SebusiekPolakPL" target="_blank">
+        <a href="https://github.com/sebusiektech" target="_blank">
             <button class="github-btn">Visit Github</button>
         </a>
     </header>
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="socials">
-                    <a href="https://github.com/SebusiekPolakPL" class="github-icon" target="_blank">
+                    <a href="https://github.com/sebusiektech" class="github-icon" target="_blank">
                         <i class="fa-brands fa-github"></i>
                     </a>
                 </div>
@@ -143,4 +143,5 @@
         <p class="copyright">© All Rights Reserved | Sebastian Klepacz</p>
     </footer>
 </body>
+
 </html>
